# dd-01-dd

./: .gitignore  CMakeLists.txt  README.md
docs/: building.md  documentation.md  paraview_visualization.md  tests.md  thomas_algorithm.md
docs/Doxygen/: Doxyfile
docs/MarkDown/: README.md  building.md  documentation.md
include/: TridiagUtils.hpp  solver.hpp  tridiag_utils.hpp  types.hpp
src/: TridiagUtils.cpp  solver.cpp  tridiag_utils.cpp  visualization_pipeline.py
test/: benchmark.cpp  test_scaling_diagnostic.cpp  test_solver.cpp  test_solver_highfreq.cpp  test_solver_overlap_steep.cpp  test_solver_polynomial.cpp  test_solver_reaction.cpp  test_solver_shifted_domain.cpp  test_tridiag.cpp
